fixed spacing on header

--- a/main.css
+++ b/main.css
@@ -11,9 +11,13 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #F6F7EB;
   color: #FFFFFF;
   font-family: 'Trocchi', serif;
+}
+
+header {
+  background-color: #F6F7EB;
+  padding-bottom: 40px;
 }
 
 ul {
@@ -77,7 +81,6 @@ p, li {
   display: flex;
   flex-direction: column;
   align-items: center; 
-  margin-top: 48px;
   padding-top: 48px;
  
 }
@@ -153,7 +156,7 @@ h3, .project-description {
 
 .project-stack {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .project-stack-item {
